--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -20,3 +20,23 @@ Enabled=1
 Enabled=1
 [file:.\src\integration\ClockGenerator.v]
 Enabled=1
+[file:.\src\DataMemory.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
+[file:.\src\InstructionMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\RegisterFile.v]
+Enabled=1
+[file:.\src\register_file\RegisterFile.v]
+Enabled=1
+[file:.\src\ControlUnit.v]
+Enabled=1
+[file:.\src\control_unit\ControlUnit.v]
+Enabled=1
+[file:.\src\ALU.v]
+Enabled=1
+[file:.\src\alu\ALU.v]
+Enabled=1
