create data memory

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -4,11 +4,7 @@ Architecture=
 TopLevelType=
 [file:.\src\PipelineProcessor.v]
 Enabled=1
-[file:.\src\PipelineProcessor.v]
-Enabled=1
 [file:.\src\integration\PipelineProcessor.v]
-Enabled=1
-[file:.\src\PipelineProcessor.v]
 Enabled=1
 [file:.\src\ClockGenerator.v]
 Enabled=1
@@ -17,8 +13,6 @@ Enabled=1
 [file:.\src\parameter.v]
 Enabled=1
 [file:.\src\integration\parameter.v]
-Enabled=1
-[file:.\src\integration\ClockGenerator.v]
 Enabled=1
 [file:.\src\DataMemory.v]
 Enabled=1
@@ -39,4 +33,8 @@ Enabled=1
 [file:.\src\ALU.v]
 Enabled=1
 [file:.\src\alu\ALU.v]
+Enabled=1
+[file:.\src\DataMemoryTestbench.v]
+Enabled=1
+[file:.\src\data_memory\DataMemoryTestbench.v]
 Enabled=1
