--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -38,3 +38,31 @@ Enabled=1
 Enabled=1
 [file:.\src\data_memory\DataMemoryTestbench.v]
 Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\data_memory\DataMemoryTestbench.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\integration\parameter.v]
+Enabled=1
+[file:.\src\IFStage.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
+[file:.\src\mux.v]
+Enabled=1
+[file:.\src\PC.v]
+Enabled=1
+[file:.\src\utilities\PC.v]
+Enabled=1
+[file:.\src\utilities\PC.v]
+Enabled=1
+[file:.\src\integration\PipelineProcessor.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
