--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -66,3 +66,11 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\IFStage.v]
 Enabled=1
+[file:.\src\DCStage.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
+[file:.\src\stages\DCStage.v]
+Enabled=1
+[file:.\src\integration\PipelineProcessor.v]
+Enabled=1
