Add ALU code with TB

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=
+Entity=ALU_tb
 Architecture=
-TopLevelType=
+TopLevelType=3
 [file:.\src\PipelineProcessor.v]
 Enabled=1
 [file:.\src\integration\PipelineProcessor.v]
@@ -38,18 +38,6 @@ Enabled=1
 Enabled=1
 [file:.\src\data_memory\DataMemoryTestbench.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\data_memory\DataMemoryTestbench.v]
-Enabled=1
-[file:.\src\data_memory\DataMemory.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\integration\parameter.v]
-Enabled=1
 [file:.\src\IFStage.v]
 Enabled=1
 [file:.\src\stages\IFStage.v]
@@ -60,17 +48,7 @@ Enabled=1
 Enabled=1
 [file:.\src\utilities\PC.v]
 Enabled=1
-[file:.\src\utilities\PC.v]
-Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
-Enabled=1
-[file:.\src\stages\IFStage.v]
-Enabled=1
 [file:.\src\DCStage.v]
 Enabled=1
-[file:.\src\stages\IFStage.v]
-Enabled=1
 [file:.\src\stages\DCStage.v]
-Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
 Enabled=1
