Add Compare unit

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -52,3 +52,9 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\DCStage.v]
 Enabled=1
+[file:.\src\Compare.v]
+Enabled=1
+[file:.\src\utilities\Compare.v]
+Enabled=1
+[file:.\src\utilities\Compare.v]
+Enabled=1
