--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=Compare_TB
+Entity=Extender_TB
 Architecture=
 TopLevelType=3
 [file:.\src\PipelineProcessor.v]
@@ -46,15 +46,25 @@ Enabled=1
 Enabled=1
 [file:.\src\PC.v]
 Enabled=1
-[file:.\src\utilities\PC.v]
-Enabled=1
 [file:.\src\DCStage.v]
-Enabled=1
-[file:.\src\stages\DCStage.v]
 Enabled=1
 [file:.\src\Compare.v]
 Enabled=1
 [file:.\src\utilities\Compare.v]
 Enabled=1
 [file:.\src\utilities\Compare.v]
+Enabled=1
+[file:.\src\stages\IDStage.v]
+Enabled=1
+[file:.\src\Extender.v]
+Enabled=1
+[file:.\src\integration\PipelineProcessor.v]
+Enabled=1
+[file:.\src\utilities\Extender.v]
+Enabled=1
+[file:.\src\integration\PipelineProcessor.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
+[file:.\src\utilities\PC.v]
 Enabled=1
