Create test bench

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=Extender_TB
+Entity=IFStage_TB
 Architecture=
 TopLevelType=3
 [file:.\src\PipelineProcessor.v]
@@ -67,4 +67,6 @@ Enabled=1
 [file:.\src\stages\IFStage.v]
 Enabled=1
 [file:.\src\utilities\PC.v]
+Enabled=1
+[file:.\src\stages\IDStage.v]
 Enabled=1
