connect ID Stage

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -70,3 +70,7 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\IDStage.v]
 Enabled=1
+[file:.\src\EXEStage.v]
+Enabled=1
+[file:.\src\stages\EXEStage.v]
+Enabled=1
