connect MEM Stage

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=EXEStage_TB
+Entity=PipelineProcessor
 Architecture=
 TopLevelType=3
 [file:.\src\PipelineProcessor.v]
@@ -73,4 +73,8 @@ Enabled=1
 [file:.\src\EXEStage.v]
 Enabled=1
 [file:.\src\stages\EXEStage.v]
+Enabled=1
+[file:.\src\MEMStage.v]
+Enabled=1
+[file:.\src\stages\MEMStage.v]
 Enabled=1
