--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -52,23 +52,13 @@ Enabled=1
 Enabled=1
 [file:.\src\utilities\Compare.v]
 Enabled=1
-[file:.\src\utilities\Compare.v]
-Enabled=1
 [file:.\src\stages\IDStage.v]
 Enabled=1
 [file:.\src\Extender.v]
 Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
-Enabled=1
 [file:.\src\utilities\Extender.v]
 Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
-Enabled=1
-[file:.\src\stages\IFStage.v]
-Enabled=1
 [file:.\src\utilities\PC.v]
-Enabled=1
-[file:.\src\stages\IDStage.v]
 Enabled=1
 [file:.\src\EXEStage.v]
 Enabled=1
@@ -77,4 +67,8 @@ Enabled=1
 [file:.\src\MEMStage.v]
 Enabled=1
 [file:.\src\stages\MEMStage.v]
+Enabled=1
+[file:.\src\WBStage.v]
+Enabled=1
+[file:.\src\stages\WBStage.v]
 Enabled=1
