--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -74,3 +74,13 @@ Enabled=1
 Enabled=1
 [file:.\src\instruction_memory\InstructionMemory.v]
 Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\integration\ClockGenerator.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
