final version from SV instruvtion

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -88,3 +88,7 @@ Enabled=1
 Enabled=1
 [file:.\src\register_file\RegisterFile.v]
 Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
+Enabled=1
