--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -92,3 +92,5 @@ Enabled=1
 Enabled=1
 [file:.\src\data_memory\DataMemory.v]
 Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
