New version from code

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -72,25 +72,27 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\WBStage.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\IF_2_ID.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\register\IF_2_ID.v]
 Enabled=1
-[file:.\src\integration\ClockGenerator.v]
+[file:.\src\ID_2_EXE.v]
 Enabled=1
-[file:.\src\data_memory\DataMemory.v]
+[file:.\src\register\ID_2_EXE.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\EXE_2_MEM.v]
 Enabled=1
-[file:.\src\data_memory\DataMemory.v]
+[file:.\src\register\EXE_2_MEM.v]
 Enabled=1
-[file:.\src\stages\MEMStage.v]
+[file:.\src\MEM_2_WB.v]
 Enabled=1
-[file:.\src\register_file\RegisterFile.v]
+[file:.\src\register\ID_2_EXE.v]
 Enabled=1
-[file:.\src\data_memory\DataMemory.v]
+[file:.\src\register\MEM_2_WB.v]
 Enabled=1
-[file:.\src\data_memory\DataMemory.v]
+[file:.\src\stages\IDStage.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\stages\IDStage.v]
+Enabled=1
+[file:.\src\integration\PipelineProcessor.v]
 Enabled=1
