**Second code idea **  ==> solve ID stage

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -86,13 +86,9 @@ Enabled=1
 Enabled=1
 [file:.\src\MEM_2_WB.v]
 Enabled=1
-[file:.\src\register\ID_2_EXE.v]
-Enabled=1
 [file:.\src\register\MEM_2_WB.v]
 Enabled=1
 [file:.\src\stages\IDStage.v]
 Enabled=1
-[file:.\src\stages\IDStage.v]
-Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
+[file:.\src\utilities\mux.v]
 Enabled=1
