**Second code idea **  ==> Try code

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -96,3 +96,19 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\EXEStage.v]
 Enabled=1
+[file:.\src\integration\stages\MEMStage.v]
+Enabled=1
+[file:.\src\integration\stages\EXEStage.v]
+Enabled=1
+[file:.\src\integration\stages\IDStage.v]
+Enabled=1
+[file:.\src\integration\stages\IFStage.v]
+Enabled=1
+[file:.\src\utilities\stages\MEMStage.v]
+Enabled=1
+[file:.\src\utilities\stages\EXEStage.v]
+Enabled=1
+[file:.\src\utilities\stages\IDStage.v]
+Enabled=1
+[file:.\src\utilities\stages\IFStage.v]
+Enabled=1
