--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -112,3 +112,11 @@ Enabled=1
 Enabled=1
 [file:.\src\utilities\stages\IFStage.v]
 Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
