**Second code idea **  ==> change IF to solve next pc

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -120,3 +120,15 @@ Enabled=1
 Enabled=1
 [file:.\src\stages\IFStage.v]
 Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\instruction_memory\InstructionMemory.v]
+Enabled=1
+[file:.\src\utilities\Compare.v]
+Enabled=1
+[file:.\src\utilities\mux.v]
+Enabled=1
+[file:.\src\utilities\mux.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
