**Second code idea **  ==> solve i type

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -136,3 +136,7 @@ Enabled=1
 Enabled=1
 [file:.\src\instruction_memory\InstructionMemory.v]
 Enabled=1
+[file:.\src\stages\IDStage.v]
+Enabled=1
+[file:.\src\stages\IFStage.v]
+Enabled=1
