**Second code idea **  ==> forward R7 without set it in the mux

--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -88,13 +88,7 @@ Enabled=1
 Enabled=1
 [file:.\src\register\MEM_2_WB.v]
 Enabled=1
-[file:.\src\stages\IDStage.v]
-Enabled=1
 [file:.\src\utilities\mux.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\stages\EXEStage.v]
 Enabled=1
 [file:.\src\integration\stages\MEMStage.v]
 Enabled=1
@@ -112,31 +106,11 @@ Enabled=1
 Enabled=1
 [file:.\src\utilities\stages\IFStage.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\data_memory\DataMemory.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\integration\PipelineProcessor.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\stages\EXEStage.v]
 Enabled=1
-[file:.\src\stages\IFStage.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\utilities\Compare.v]
-Enabled=1
-[file:.\src\utilities\mux.v]
-Enabled=1
-[file:.\src\utilities\mux.v]
-Enabled=1
-[file:.\src\stages\IFStage.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
-Enabled=1
-[file:.\src\stages\IDStage.v]
-Enabled=1
-[file:.\src\stages\IFStage.v]
+[file:.\src\IF_Stage\IFStage.v]
 Enabled=1
