--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -106,11 +106,9 @@ Enabled=1
 Enabled=1
 [file:.\src\utilities\stages\IFStage.v]
 Enabled=1
-[file:.\src\data_memory\DataMemory.v]
+[file:.\src\IF_Stage\IFStage.v]
 Enabled=1
 [file:.\src\integration\PipelineProcessor.v]
 Enabled=1
-[file:.\src\stages\EXEStage.v]
-Enabled=1
-[file:.\src\IF_Stage\IFStage.v]
+[file:.\src\instruction_memory\InstructionMemory.v]
 Enabled=1
