--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=PipelineProcessor
+Entity=EXEStage_TB
 Architecture=
 TopLevelType=3
 [file:.\src\PipelineProcessor.v]
@@ -108,7 +108,9 @@ Enabled=1
 Enabled=1
 [file:.\src\IF_Stage\IFStage.v]
 Enabled=1
-[file:.\src\integration\PipelineProcessor.v]
+[file:.\src\stages\MEMStage.v]
 Enabled=1
-[file:.\src\instruction_memory\InstructionMemory.v]
+[file:.\src\stages\MEMStage.v]
+Enabled=1
+[file:.\src\data_memory\DataMemory.v]
 Enabled=1
