--- a/PipelineProcessor/compile.cfg
+++ b/PipelineProcessor/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=EXEStage_TB
+Entity=PipelineProcessor
 Architecture=
 TopLevelType=3
 [file:.\src\PipelineProcessor.v]
@@ -107,10 +107,4 @@ Enabled=1
 [file:.\src\utilities\stages\IFStage.v]
 Enabled=1
 [file:.\src\IF_Stage\IFStage.v]
-Enabled=1
-[file:.\src\stages\MEMStage.v]
-Enabled=1
-[file:.\src\stages\MEMStage.v]
-Enabled=1
-[file:.\src\data_memory\DataMemory.v]
 Enabled=1
